init voice agent

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DEEPSEEK_API_KEY=
 PARALLEL_AGENT_TELEGRAM_BOT_TOKEN=
 GIT_MCP_TELEGRAM_BOT_TOKEN=
 GIT_MCP_REPO_PATH=
+VOICE_AGENT_TELEGRAM_BOT_TOKEN=
