add streaming agent

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ PARALLEL_AGENT_TELEGRAM_BOT_TOKEN=
 GIT_MCP_TELEGRAM_BOT_TOKEN=
 GIT_MCP_REPO_PATH=
 VOICE_AGENT_TELEGRAM_BOT_TOKEN=
+STREAMING_AGENT_TELEGRAM_BOT_TOKEN=
